# Autocomplete

./: .env  COMMENTS.md  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
back/: .env.sample  .flake8  README.md  pyproject.toml
back/src/: __main__.py  app.py  config.py  controllers.py  views.py
back/src/api/: app.py  views.py
back/src/api/graphql/: mutation.py  query.py  schema.py
back/src/api/search/: engine.py
back/src/search/: engine.py
back/src/seeder/: __main__.py  seed.py  terms.json
back/src/tests/: mocked.py  test_api.py  test_search_engine.py
back/tests/: mocked.py  test_api.py  test_search_engine.py
front/: .env  .env.sample  .eslintrc.js  README.md  package-lock.json  package.json
front/public/: index.html
front/src/: App.css  App.js  App.test.js  config.js
front/src/components/: App.css  App.jsx  SearchBox.css  SearchBox.jsx  SearchButton.jsx
front/src/services/: suggestions.jsx
