[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["JeanExtreme002 <jeangamerextreme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = {extras = ["cli", "fastapi"], version = "^0.235.2"}
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
fastapi-cache2 = "^0.2.1"
pydantic = "^2.8.2"
elasticsearch = "^8.14.0"
requests = "^2.32.3"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
